src/objects/Operation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bank_account__c</fullName>
        <label>Bank account</label>
        <referenceTo>Bank_account__c</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit card</label>
        <referenceTo>Credit__c</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Month_2__c</fullName>
        <label>Current Month 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <formula>IF(MONTH(DateValue(CreatedDate)) = Month( TODAY()) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Merchant</label>
        <referenceTo>Merchant__c</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Money__c</fullName>
        <label>Money</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_month__c</fullName>
        <defaultValue>ADDMONTHS(TODAY() - DAY(TODAY()-1),1)</defaultValue>
        <label>Next month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stuck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stuck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_operation__c</fullName>
        <label>Type of operation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Перевод</fullName>
                </value>
                <value>
                    <fullName>Обмен валют</fullName>
                </value>
                <value>
                    <fullName>Кредит</fullName>
                </value>
                <value>
                    <fullName>Оплата услуг</fullName>
                </value>
                <value>
                    <fullName>Операция с карточкой(списание/пополнение)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Operation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Operation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Credit_card_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Credit_card__c  = null, ISPICKVAL( Type_of_operation__c , &apos;Операция с карточкой(списание/пополнение)&apos;))</errorConditionFormula>
        <errorMessage>For this type of operation you need credit card!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_credit_cards</fullName>
        <active>true</active>
        <errorConditionFormula>Account__r.Name  &lt;&gt;  Bank_account__r.Account__r.Name</errorConditionFormula>
        <errorMessage>This account do not related to your!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_credit_cards_op</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Credit_card__c  &lt;&gt; null,Account__r.Name  &lt;&gt;  Credit_card__r.Account1__r.Name)</errorConditionFormula>
        <errorMessage>This card not yours!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>More_than_day_limit</fullName>
        <active>true</active>
        <errorConditionFormula>Bank_account__r.local_day_limit__c + Money__c &gt;=  Bank_account__r.Day_limit__c</errorConditionFormula>
        <errorMessage>Limit is exceeded</errorMessage>
    </validationRules>
</CustomObject>